# nba-dfs-optimizer

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  GEMINI.md  HOWTO.md  LICENSE  README.md  config.py  engine.py  exporter.py  exposure_report.py  implement_data_loader.md  late_swapper.py  late_swapper_batch.py  late_swapper_v1.1.py  late_swapper_v1.py  pyproject.toml  ranker.py  requirements-gui.txt  requirements.txt  run_optimizer.py  run_optimizer_gui.py
.claude/hooks/: session-start.sh
.gemini/: config.yaml  styleguide.md
.github/: DESIGN_exposure_report_flexible_parsing.md  PSEUDOCODE_exposure_report_refactor.md  copilot-instructions.md
.github/instructions/: update-docs-on-code-change.instructions.md
.github/workflows/: claude-auto-pr-review.yml  claude.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
deprecated/: late_swapper_v1.py
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/design/: simulator.md
example_projs/: NBA-Projs-2026-02-11_153604.csv
plans/: 001-establish-verification-baseline.md  002-separate-gui-dependencies.md  003-explicit-pipeline-artifacts.md  004-consolidate-player-data-loading.md  005-vectorize-lineup-ranking.md  README.md
scripts/: engine.py  exporter.py  exposure_report.py  late_swapper_v1.1.py  ranker.py  run_optimizer.py  run_optimizer_gui.py
tests/: test_engine_constraints.py  test_late_swap.py  test_late_swapper.py  test_pipeline_artifacts.py  test_utils.py
(+30 files in other folders)
